# eip

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/adr/: 001-architecture.md  template.md
glue/: normalize_job.py
infra/bootstrap/: README.md  main.tf  variables.tf
infra/envs/dev/: backend.tf  dev.example.tfvars  main.tf  variables.tf
infra/modules/aurora/: main.tf  outputs.tf  variables.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/consumer/: main.tf  outputs.tf  variables.tf
infra/modules/glue/: main.tf  variables.tf
infra/modules/messaging/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
infra/modules/pipeline/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf  outputs.tf  variables.tf
services/ingestion/: Dockerfile  Dockerfile.lambda  create_tables.py  pyproject.toml
services/ingestion/src/ingestion/: __init__.py  lambda_handler.py  main.py  steps.py
services/ingestion/src/ingestion/adapters/: __init__.py  db.py  dedup_index.py  parsers.py  repository.py
services/ingestion/src/ingestion/application/: __init__.py  ports.py  use_cases.py
services/ingestion/src/ingestion/domain/: __init__.py  models.py
services/ingestion/tests/: test_business_key.py  test_health.py  test_normalize.py  test_parser.py  test_repository.py
services/ingestion/tests/fixtures/: sample.csv  sample.json  sample.xml
